[package]
name = "touch-control"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["ws", "macros", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.2"
rcgen = "0.13.2"
local-ip-address = "0.6.3"
tokio-util = { version = "0.7.14", features = ["io"] }
http-body-util = "0.1.3"

axum-extra = { version = "0.10.1", features = ["typed-header"]}
vjoy = "0.6.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
